--- a/example/with-socket.io-html/public/index.html
+++ b/example/with-socket.io-html/public/index.html
@@ -113,7 +113,7 @@
         </div>
         <div id="divContainer" style="display: none; background-color: #eee; height: 100%;">
             <div style="padding: 5px;">
-                <input type="button" value="Setup" onclick="AxiomCrossFilterClient.setup()" />
+                <input type="button" value="Connect" onclick="AxiomCrossFilterClient.connect()" />
                 <input type="button" value="Add Dimenssion" onclick="AxiomCrossFilterClient.addDimension()" />
                 <!--<input type="button" value="Fetch Data" onclick="AxiomCrossFilterClient.fetchData()" />-->
                 <span id="statusMessage"></span>
